kakaomap, seoulmap(intensity, pin, gu_name), data/seoul.json 수정
B

--- a/sinkhole-visualization/public/index.html
+++ b/sinkhole-visualization/public/index.html
@@ -24,6 +24,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-sA+e2yUV2aa/1sVg+Se0kuMylA3rP4R2z9nFY2vxb0g="
+      crossorigin=""
+    />
     <title>React App</title>
   </head>
   <body>
